[package]
name = "twitch-api-rs"
description = "An async binding on the twitch api (helix) using reqwest"
version = "0.1.0"
authors = ["Josiah Hilden <jhilden13@gmail.com>"]
edition = "2018"
license = "GNU GPLv3"
keywords = ["twitch"]
categories = ["api-bindings"]
repository = "https://github.com/oldwomanjosiah/twitch-api.rs"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.10", features = [ "json" ] }
time = { version = "0.2", default-features = false, features = [ "std", "serde" ] }
structopt = "0.3"
log = "0.4"

